# ez-tools

./: .gitignore  README.md
ez-infra-tools/: .sops.yaml  README.md  pyproject.toml
ez-infra-tools/secrets/: age-key.txt  secrets.yaml
ez-infra-tools/src/ez_infra_tools/: __init__.py  cli.py
ez-infra-tools/src/ez_infra_tools/k8s/: __init__.py  deploy.py
ez-infra-tools/src/ez_infra_tools/secrets/: __init__.py  sops_age.py
ez-infra-tools/test-secrets/: .sops.yaml
ez-infra-tools/test-secrets/secrets/: age-key.txt  secrets.yaml
sample-projects/p1/environments/prod/: values.yaml
sample-projects/p1/environments/prod/secrets/: secrets.yaml
sample-projects/p1/helm/templates/: pod.yaml  pv.yaml  pvc.yaml
